statum-macros/tests/ui/invalid_machine_builder_duplicate_field.stderr
error[E0308]: mismatched types
  --> tests/ui/invalid_machine_builder_duplicate_field.rs:26:15
   |
26 |         .name("second".to_owned())
   |          ---- ^^^^^^^^^^^^^^^^^^^ expected `__StatumWorkflowMachineDraftBuilderAlreadySet`, found `String`
   |          |
   |          arguments to this method are incorrect
   |
note: method defined here
  --> tests/ui/invalid_machine_builder_duplicate_field.rs:18:1
   |
18 | #[machine]
   | ^^^^^^^^^^
   = note: this error originates in the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)
